# backbone

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  query_packet.txt  response_packet.txt
Source/: main.cpp
Source/DNS/: DNS.hpp  Packet.hpp
Source/DNS/Core/: Error.cpp  Error.hpp  Helpers.hpp  Result.tcc
Source/DNS/Utility/: PacketBuffer.cpp  PacketBuffer.hpp
Source/backbone/: packet.hpp
Source/backbone/core/: error.hpp  helpers.hpp  pch.hpp  result.tcc
Source/backbone/utility/: packet_buffer.cpp
cmd/: CMakeLists.txt
cmd/run/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/backbone/: backbone.hpp  packet.hpp
source/backbone/core/: error.cpp  error.hpp  helpers.hpp  pch  result.tcc  result.tpp
source/backbone/core/error/: codes.hpp  error.cpp  unit.cpp
source/backbone/core/result/: result.tpp
source/backbone/lib/buffer/: basic.tcc  basic.tpp  basic_buffer.tcc  buffer.hpp
source/backbone/lib/packet/: buffer.cpp  buffer.hpp  header.cpp  header.hpp  packet.cpp  packet.hpp  question.cpp  question.hpp  record.cpp  record.hpp
source/backbone/utility/: log.cpp  packet_buffer.cpp  packet_buffer.hpp
src/: main.rs
src/buffer/: buffer.rs  ops_basic.rs  ops_uint.rs
src/dns/: dns_header.rs  dns_packet.rs  dns_question.rs  dns_record.rs  query_type.rs
src/dns/core/: packet_buffer.rs  query_type.rs
src/dns/packet/: buffer.rs  header.rs  packet.rs
src/dns/question/: query_type.rs  question.rs
src/dns/record/: record.rs
src/utility/: packet_buffer.rs  result.rs
